proyecto 4 punto 5: completo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
     <link rel="stylesheet" href="./vendor/normalize.css"/>
 </head>
 <body>
-<div class="page">   
+<div class="page">  
+<header class="header" ></header>
+<main class="content">
+    <section class="recipes"></section>
+<section class="reservation"></section>
+</main>
+<footer></footer>
 </div>
 </body>
 </html>
