proyecto 4: correcciones Cw3

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta chartser="UTF-8">
+<!DOCTYPE html >
+<html lang="es" >
+ <head>
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="Conoce más acerca de la cafetería de triple peaks, un lugar donde podrás intercambiar conocimientos con otros desarrolladores web mientras disfrutas de la selección de café de nuestro barista"/>
     <meta name="keywords" content="código, programación, HTML, CSS, JavaScript, café, cafetería, tripleten, desarrollo web, desarrolladores web, comunidad, barista, reservaciones, tutoriales de café, tutoriales de snaks"/>
@@ -22,8 +22,12 @@
     <h1>esto es una prueba</h1>
 <header class="header" ></header>
 <main class="content">
-    <section class="recipes"></section>
-<section class="reservation"></section>
+    <section class="recipes">
+        <h2>esto es una prueba</h2>
+    </section>
+<section class="reservation">
+    <h2>esto es una prueba</h2>
+</section>
 </main>
 <footer></footer>
 </div>
