proyecto 4: correcciones de acuerdo a revision automatizada tripleten rev2

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h2>esto es una prueba</h2>
 </section>
 </main>
-<footer></footer>
+<footer class="footer"></footer>
 </div>
 </body>
 </html>
