--- a/index.html
+++ b/index.html
@@ -19,14 +19,57 @@
 </head>
 <body>
 <div class="page">  
-    <h1>esto es una prueba</h1>
-<header class="header" ></header>
+<header class="header" >
+    <nav class="nav">
+        <img
+          src="./images/logo_coffeeshop_dark.svg"
+          alt="Logotipo de la Cafetería Triple Expresso"
+          class="nav__logo"
+        />
+        <ul class="nav__links">
+          <li>
+            <a href="#recetas" class="nav__link"
+              >Recetas</a
+            >
+          </li>
+          <li>
+            <a href="#reserva" class="nav__link">Reserva una mesa</a>
+          </li>
+          <li>
+            <a href="#footer" class="nav__link">Contactos</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="header__content">
+        <div class="header__text-container">
+          <h1 class="header__title">
+            <span class="header__span-accent">Café de especialidad</span>
+            en Triple Peaks
+          </h1>
+          <p class="header__description">
+            ¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café para darte energía y motivar tu creatividad.
+          </p>
+        </div>
+
+        <img
+          src="./images/inside_coffee_shop.png"
+          alt="Ilustración 'Dentro de la biblioteca'"
+          class="header__image"
+        />
+      </div>
+      <div class="header__footer">
+        <p class="header__pharagraph">Horario:</p>
+        <p class="header__pharagraph">Lunes a Viernes (de 10:00h a 19:00h)</p>
+        <p class="header__pharagraph">Sábados y Domingos (de 11:00h a 18:00h)</p>
+        <p class="header__pharagraph">Avenida del Éxito 200, Ciudad Triple Peaks</p>
+      </div>
+</header>
 <main class="content">
     <section class="recipes">
-        <h2>esto es una prueba</h2>
+        <h2>sección recipes en proceso</h2>
     </section>
 <section class="reservation">
-    <h2>esto es una prueba</h2>
+    <h2>sección reservas en proceso</h2>
 </section>
 </main>
 <footer class="footer"></footer>
