--- a/index.html
+++ b/index.html
@@ -28,19 +28,18 @@
         />
         <ul class="nav__links">
           <li>
-            <a href="#recetas" class="nav__link"
+            <a href="#recetas" class="nav__link nav__link_recetas"
               >Recetas</a
             >
           </li>
           <li>
-            <a href="#reserva" class="nav__link">Reserva una mesa</a>
+            <a href="#reserva" class="nav__link nav__link_reserva">Reserva una mesa</a>
           </li>
           <li>
-            <a href="#footer" class="nav__link">Contactos</a>
+            <a href="#contactos" class="nav__link nav__link_contactos">Contactos</a>
           </li>
         </ul>
       </nav>
-      <div class="header__content">
         <div class="header__text-container">
           <h1 class="header__title">
             <span class="header__span-accent">Café de especialidad</span>
@@ -53,10 +52,9 @@
 
         <img
           src="./images/inside_coffee_shop.png"
-          alt="Ilustración 'Dentro de la biblioteca'"
+          alt="Ilustración 'Dentro de la cafetería de Triple Peaks'"
           class="header__image"
         />
-      </div>
       <div class="header__footer">
         <p class="header__pharagraph">Horario:</p>
         <p class="header__pharagraph">Lunes a Viernes (de 10:00h a 19:00h)</p>
