solo falta footer de headere

--- a/index.html
+++ b/index.html
@@ -40,28 +40,35 @@
           </li>
         </ul>
       </nav>
-        <div class="header__text-container">
           <h1 class="header__title">
-            <span class="header__span-accent">Café de especialidad</span>
-            en Triple Peaks
+          <span class="header__span-accent">Café de especialidad</span>
+          en&nbsp;Triple&nbsp;Peaks
           </h1>
           <p class="header__description">
             ¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café para darte energía y motivar tu creatividad.
           </p>
-        </div>
-
         <img
           src="./images/inside_coffee_shop.png"
           alt="Ilustración 'Dentro de la cafetería de Triple Peaks'"
           class="header__image"
         />
       <div class="header__footer">
-        <p class="header__pharagraph">Horario:</p>
-        <p class="header__pharagraph">Lunes a Viernes (de 10:00h a 19:00h)</p>
-        <p class="header__pharagraph">Sábados y Domingos (de 11:00h a 18:00h)</p>
-        <p class="header__pharagraph">Avenida del Éxito 200, Ciudad Triple Peaks</p>
+          <ul>
+            <li>
+              <p class="header__pharagraph">Horario:</p>
+            </li>
+            <li>
+              <p class="header__pharagraph">Lunes a Viernes (de 10:00h a 19:00h)</p>
+            </li>
+            <li>
+              <p class="header__pharagraph">Sábados y Domingos (de 11:00h a 18:00h)</p>
+            </li>
+            <li>
+              <p class="header__pharagraph header__pharagraph_address">Avenida del Éxito 200, Ciudad Triple Peaks</p>
+            </li>
+          </ul>
       </div>
-</header>
+ </header>
 <main class="content">
     <section class="recipes">
         <h2>sección recipes en proceso</h2>
