--- a/index.html
+++ b/index.html
@@ -70,9 +70,49 @@
       </div>
  </header>
 <main class="content">
+
     <section class="recipes">
-        <h2>sección recipes en proceso</h2>
+      <div class="recipes__title">
+       <h2>Recetas</h2> 
+      </div>
+      <div class="recipes__subtitle">
+        <h3>Echa un vistazo a las recetas que hemos reunido para que elabores tus propios snacks.</h3>
+      </div>
+       <div class="recipes__videos">
+       <div class="recipes__video-item">
+        <div class="recipes__iframe">
+        <iframe 
+        src="https://www.youtube.com/embed/st571DYYTR8?si=uFRn7k87Fao8zZjP" 
+        title="YouTube video player" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" 
+        allowfullscreen></iframe>
+      </div>
+      <div class="recipes__video-caption">
+        <p>Receta en Aeropress&nbsp;~5 min</p>
+      </div>
+       </div> 
+       <div class="recipes__video-item">
+       <div class="recipes__iframe">
+        <iframe 
+        src="https://www.youtube.com/embed/j6VlT_jUVPc?si=PrJXtB_6t0smHPcP" 
+        title="YouTube video player" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" 
+        allowfullscreen>
+      </iframe>
+       </div>
+        <div class="recipes__video-caption">
+          <p>Receta en cafetera francesa &nbsp;~15 min</p>
+        </div>
+      </div>
+       </div>
+      </div>
     </section>
+
+    
 <section class="reservation">
     <h2>sección reservas en proceso</h2>
 </section>
