--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           class="header__image"
         />
       <div class="header__footer">
-          <ul>
+          <ul class="header__footer__pharagraphs">
             <li>
               <p class="header__pharagraph">Horario:</p>
             </li>
@@ -70,7 +70,6 @@
       </div>
  </header>
 <main class="content">
-
     <section class="recipes">
       <div class="recipes__title">
        <h2>Recetas</h2> 
@@ -110,9 +109,7 @@
       </div>
        </div>
       </div>
-    </section>
-
-    
+    </section>    
 <section class="reservation">
     <h2>sección reservas en proceso</h2>
 </section>
