posicionamiento de Head completo, falta revisar formatos y fuentes

--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@
             <li>
               <p class="header__pharagraph">Sábados y Domingos (de 11:00h a 18:00h)</p>
             </li>
-            <li>
-              <p class="header__pharagraph header__pharagraph_address">Avenida del Éxito 200, Ciudad Triple Peaks</p>
-            </li>
           </ul>
+      <div class="header__pharagraph_address">
+        <p class="header__pharagraph">Avenida del Éxito 200, Ciudad Triple Peaks
+        </p>
+      </div>
       </div>
  </header>
 <main class="content">
