Head con correcciones de estilo, listo para revisión

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
       </div>
       </div>
  </header>
+ <!---
 <main class="content">
     <section class="recipes">
       <div class="recipes__title">
@@ -115,7 +116,7 @@
     <h2>sección reservas en proceso</h2>
 </section>
 </main>
-<footer class="footer"></footer>
+<footer class="footer"></footer> -->
 </div>
 </body>
 </html>
