--- a/index.html
+++ b/index.html
@@ -65,57 +65,61 @@
             </li>
           </ul>
       <div class="header__pharagraph_address header__pharagraph">
-        <p class=>Avenida del Éxito 200, Ciudad Triple Peaks
+        <p>Avenida del Éxito 200, Ciudad Triple Peaks
         </p>
       </div>
       </div>
     </header>
 <main class="content">
-    <section class="recipes">
+    <section class="recipes" id="recetas">
       <div class="recipes__title">
        <h2>Recetas</h2> 
       </div>
       <div class="recipes__subtitle">
-        <h3>Echa un vistazo a las recetas que hemos reunido para que elabores tus propios snacks.</h3>
+        <p>Echa un vistazo a las recetas que hemos reunido para que elabores tus propios snacks.</p>
       </div>
        <div class="recipes__videos">
        <div class="recipes__video-item">
-        <div class="recipes__iframe">
-        <iframe 
+        <iframe
+        class="recipes__iframe"
         src="https://www.youtube.com/embed/st571DYYTR8?si=uFRn7k87Fao8zZjP" 
         title="YouTube video player" 
-        frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-        referrerpolicy="strict-origin-when-cross-origin" 
-        allowfullscreen></iframe>
-      </div>
-      <div class="recipes__video-caption">
-        <p>Receta en Aeropress&nbsp;~5 min</p>
-      </div>
-       </div> 
-       <div class="recipes__video-item">
-       <div class="recipes__iframe">
-        <iframe 
-        src="https://www.youtube.com/embed/j6VlT_jUVPc?si=PrJXtB_6t0smHPcP" 
-        title="YouTube video player" 
-        frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
         referrerpolicy="strict-origin-when-cross-origin" 
         allowfullscreen>
       </iframe>
-       </div>
         <div class="recipes__video-caption">
-          <p>Receta en cafetera francesa &nbsp;~15 min</p>
+          <div class="recipes__video-caption_text">
+          <p>Receta en Aeropress</p>
+        </div>
+          <div class="recipes__video-caption_time">
+          <p>~5 min</p>
+          </div>
+        </div>
+      </div>
+       <div class="recipes__video-item">
+        <iframe 
+        class="recipes__iframe"
+        src="https://www.youtube.com/embed/j6VlT_jUVPc?si=PrJXtB_6t0smHPcP" 
+        title="YouTube video player" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" 
+        allowfullscreen>
+      </iframe>
+        <div class="recipes__video-caption">
+          <div class="recipes__video-caption_text">
+          <p>Receta en cafetera francesa</p>
+        </div>
+        <div class="recipes__video-caption_time">
+          <p>~15 min</p>
+        </div>
         </div>
       </div>
        </div>
-      </div>
-    </section>    
-<section class="reservation">
-    <h2>sección reservas en proceso</h2>
-</section>
-</main>
-<footer class="footer"></footer>
+    </section>  
+  </main>
 </div>
+  <footer>
+  </footer>
 </body>
 </html>
