--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           class="header__image"
         />
       <div class="header__footer">
-          <ul class="header__footer_pharagraphs">
+          <ul class="header__footer header__footer_pharagraphs">
             <li>
               <p class="header__pharagraph">Horario:</p>
             </li>
@@ -89,10 +89,10 @@
         allowfullscreen>
       </iframe>
         <div class="recipes__video-caption">
-          <div class="recipes__video-caption_text">
+          <div class="recipes__video-caption recipes__video-caption_text">
           <p>Receta en Aeropress</p>
         </div>
-          <div class="recipes__video-caption_time">
+          <div class="recipes__video-caption recipes__video-caption_time">
           <p>~5 min</p>
           </div>
         </div>
@@ -107,10 +107,10 @@
         allowfullscreen>
       </iframe>
         <div class="recipes__video-caption">
-          <div class="recipes__video-caption_text">
+          <div class="recipes__video-caption recipes__video-caption_text">
           <p>Receta en cafetera francesa</p>
         </div>
-        <div class="recipes__video-caption_time">
+        <div class="recipes__video-caption recipes__video-caption_time">
           <p>~15 min</p>
         </div>
         </div>
@@ -118,8 +118,8 @@
        </div>
     </section>  
   </main>
-</div>
   <footer>
   </footer>
+</div>
 </body>
 </html>
