correcciones Tripleten revisión automática rev1

--- a/index.html
+++ b/index.html
@@ -116,9 +116,11 @@
         </div>
       </div>
        </div>
+    </section>
+    <section class="reserva" id="reserva">
     </section>  
   </main>
-  <footer>
+  <footer class="contactos" id="contactos">
   </footer>
 </div>
 </body>
