correcciones revisión automatica tripleten rev2

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <section class="reserva" id="reserva">
     </section>  
   </main>
-  <footer class="contactos" id="contactos">
+  <footer class="footer" id="contactos">
   </footer>
 </div>
 </body>
