--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         />
         <ul class="nav__links">
           <li>
-            <a href="#recetas" class="nav__link nav__link_recetas"
+            <a href="#recipes" class="nav__link nav__link_recetas"
               >Recetas</a
             >
           </li>
           <li>
-            <a href="#reserva" class="nav__link nav__link_reserva">Reserva una mesa</a>
+            <a href="#reservation" class="nav__link nav__link_reserva">Reserva una mesa</a>
           </li>
           <li>
             <a href="#contactos" class="nav__link nav__link_contactos">Contactos</a>
@@ -64,14 +64,14 @@
               <p class="header__pharagraph">Sábados y Domingos (de 11:00h a 18:00h)</p>
             </li>
           </ul>
-      <div class="header__pharagraph_address header__pharagraph">
-        <p>Avenida del Éxito 200, Ciudad Triple Peaks
+      <div class="header__pharagraph header__pharagraph_address">
+        <p class="header__pharagraph">Avenida del Éxito 200, Ciudad Triple Peaks
         </p>
       </div>
       </div>
     </header>
 <main class="content">
-    <section class="recipes" id="recetas">
+    <section class="recipes" id="recipes">
       <div class="recipes__title">
        <h2>Recetas</h2> 
       </div>
@@ -117,7 +117,7 @@
       </div>
        </div>
     </section>
-    <section class="reserva" id="reserva">
+    <section class="reservation" id="reservation">
     </section>  
   </main>
   <footer class="footer" id="contactos">
