--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           class="header__image"
         />
       <div class="header__footer">
+        <div class="header__footer header__footer_element-container">
           <ul class="header__footer header__footer_pharagraphs">
             <li>
               <p class="header__pharagraph">Horario:</p>
@@ -63,11 +64,14 @@
             <li>
               <p class="header__pharagraph">Sábados y Domingos (de 11:00h a 18:00h)</p>
             </li>
-          </ul>
-      <div class="header__pharagraph header__pharagraph_address">
+          </div>
+          <div class="header__footer header__footer_element-container_address">
+          <li>
         <p class="header__pharagraph">Avenida del Éxito 200, Ciudad Triple Peaks
         </p>
-      </div>
+      </li>
+    </div>
+    </ul>
       </div>
     </header>
 <main class="content">
