--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
           class="header__image"
         />
       <div class="header__footer">
-        <div class="header__footer header__footer_element-container">
           <ul class="header__footer header__footer_pharagraphs">
             <li>
               <p class="header__pharagraph">Horario:</p>
@@ -63,16 +62,14 @@
             </li>
             <li>
               <p class="header__pharagraph">Sábados y Domingos (de 11:00h a 18:00h)</p>
-            </li>
-          </div>
-          <div class="header__footer header__footer_element-container_address">
-          <li>
-        <p class="header__pharagraph">Avenida del Éxito 200, Ciudad Triple Peaks
-        </p>
-      </li>
-    </div>
+            </li> 
     </ul>
-      </div>
+    <ul class="header__footer header__footer_pharagraphs header__pharagraphs_address">
+      <li>
+      <p class="header__pharagraph">Avenida del Éxito 200, Ciudad Triple Peaks</p>
+    </li>
+    </ul>
+    </div>
     </header>
 <main class="content">
     <section class="recipes" id="recipes">
