--- a/index.html
+++ b/index.html
@@ -53,22 +53,14 @@
           class="header__image"
         />
       <div class="header__footer">
-          <ul class="header__footer header__footer_pharagraphs">
-            <li>
+          <div class="header__footer header__footer_timetable">
               <p class="header__pharagraph">Horario:</p>
-            </li>
-            <li>
               <p class="header__pharagraph">Lunes a Viernes (de 10:00h a 19:00h)</p>
-            </li>
-            <li>
               <p class="header__pharagraph">Sábados y Domingos (de 11:00h a 18:00h)</p>
-            </li> 
-    </ul>
-    <ul class="header__footer header__footer_pharagraphs header__pharagraphs_address">
-      <li>
-      <p class="header__pharagraph">Avenida del Éxito 200, Ciudad Triple Peaks</p>
-    </li>
-    </ul>
+          </div>
+          <div class="header__footer header__footer_address">
+              <p class="header__pharagraph">Avenida del Éxito 200, Ciudad Triple Peaks</p>
+            </div>
     </div>
     </header>
 <main class="content">
