--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
           class="header__image"
         />
       <div class="header__footer">
-          <div class="header__footer header__footer_timetable">
+        <div class="header__timetable">
               <p class="header__pharagraph">Horario:</p>
               <p class="header__pharagraph">Lunes a Viernes (de 10:00h a 19:00h)</p>
               <p class="header__pharagraph">Sábados y Domingos (de 11:00h a 18:00h)</p>
-          </div>
-          <div class="header__footer header__footer_address">
+            </div>
+            <div class="header__address">
               <p class="header__pharagraph">Avenida del Éxito 200, Ciudad Triple Peaks</p>
             </div>
-    </div>
+            </div>
     </header>
 <main class="content">
     <section class="recipes" id="recipes">
