--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
         />
       <div class="header__footer">
         <div class="header__footer header__timetable">
-              <p class="header__pharagraph">Horario:</p>
-              <p class="header__pharagraph">Lunes a Viernes (de 10:00h a 19:00h)</p>
-              <p class="header__pharagraph">Sábados y Domingos (de 11:00h a 18:00h)</p>
+              <p class="header__paragraph">Horario:</p>
+              <p class="header__paragraph">Lunes a Viernes (de 10:00h a 19:00h)</p>
+              <p class="header__paragraph">Sábados y Domingos (de 11:00h a 18:00h)</p>
             </div>
             <div class="header__footer header__address">
-              <p class="header__pharagraph">Avenida del Éxito 200, Ciudad Triple Peaks</p>
+              <p class="header__paragraph">Avenida del Éxito 200, Ciudad Triple Peaks</p>
             </div>
             </div>
     </header>
