--- a/index.html
+++ b/index.html
@@ -111,6 +111,23 @@
        </div>
     </section>
     <section class="reservation" id="reservation">
+      <h2 class="reservation__title">Reservar una mesa</h2>
+      <div class="form">
+      <form class="form reservation__form">
+      <fieldset class="form__fieldset">
+        <label for="name" class="form form__label form__label_name">
+        <input id="name" name="name" class="form form__input form__input_name">
+        </label>
+        <button type="submit" id="button" class="form form__button">
+        </button>
+        <label for="" class="form form__label form__label_checkbox-container">
+        <input type="checkbox" id="checkbox" name="checkbox" class="form form__checkbox">
+        <label for="checkbox" class="form form__label form__label_checkbox">
+        </label>
+      </label>
+      </fieldset>
+      </form>
+    </div>
     </section>  
   </main>
   <footer class="footer" id="contactos">
