--- a/index.html
+++ b/index.html
@@ -116,21 +116,21 @@
       <form class="form reservation__form">
       <fieldset class="form__fieldset">
         <label for="name" class="form form__label form__label_name">Nombre *
-        <input type="text" id="name" name="name"  class="form form__input form__input_name" placeholder="Nombre">
+        <input type="text" id="name" name="name"  class="form form__input form__input_name" placeholder="Nombre" required>
         </label>
         <label for="number-guests" class="form form__label form__label_number-guests">Número de comensales *
-          <input type="number" id="number-guests" name="number-guests" min="1" max="8" class="form form__input form__input_number-guests" placeholder="1-8">
+          <input type="number" id="number-guests" name="number-guests" min="1" max="8" class="form form__input form__input_number-guests" placeholder="1-8" required>
         </label>
         <label for="datetime" class="form form__label form__label_datetime">Fecha y hora *
-          <input type="datetime-local" id="datetime" name="datetime" class="form form__input form__input_datetime">
+          <input type="datetime-local" id="datetime" name="datetime" class="form form__input form__input_datetime" required>
         </label>
         <label for="email" class="form form__label form__label_email">Tu correo electrónico *
-          <input type="email" id="email" name="email" class="form form__input form__input_email" placeholder="email@email.com">
+          <input type="email" id="email" name="email" class="form form__input form__input_email" placeholder="email@email.com" required>
         </label>
         <button type="submit" id="button" class="form form__button">Reservar una mesa
         </button>
         <label for="checkbox" class="form form__label form__label_checkbox-container">
-          <input type="checkbox" id="checkbox" name="checkbox" class="form form__checkbox">
+          <input type="checkbox" id="checkbox" name="checkbox" class="form form__checkbox" required>
         <span class="form form__label_checkbox-text">Acepto los términos de uso</span>
         <label for="checkbox" class="form form__label form__label_checkbox">
         </label>
