--- a/index.html
+++ b/index.html
@@ -129,11 +129,9 @@
         </label>
         <button type="submit" id="button" class="form form__button">Reservar una mesa
         </button>
-        <label for="checkbox" class="form form__label form__label_checkbox-container">
-          <input type="checkbox" id="checkbox" name="checkbox" class="form form__checkbox" required>
-        <span class="form form__label_checkbox-text">Acepto los términos de uso</span>
         <label for="checkbox" class="form form__label form__label_checkbox">
-        </label>
+          <input type="checkbox" id="checkbox" name="checkbox" class="form form__checkbox" required>
+        <span class="form form__span_checkbox">Acepto los términos de uso</span>
       </label>
       </fieldset>
       </form>
