Sprint-4__Stage-4_Backup_Rev6- corrección linea 134 html y 214 css

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </button>
         <label for="checkbox" class="form form__label form__label_checkbox">
           <input type="checkbox" id="checkbox" name="checkbox" class="form form__checkbox" required>
-        <span class="form form__label form__span_checkbox">Acepto los términos de uso</span>
+        <span class="form form__span form__span_checkbox">Acepto los términos de uso</span>
       </label>
       </fieldset>
       </form>
