Sprint-4__Stage-5-Rev1 Backup footer

--- a/index.html
+++ b/index.html
@@ -137,7 +137,14 @@
     </div>
     </section>  
   </main>
-  <footer class="footer" id="contactos">
+<footer class="footer" id="contactos"> 
+  <div class="footer__content">
+    <img
+          src="./images/logo_coffeeshop_light.svg"
+          alt="Logotipo de la Cafetería Triple Expresso"
+          class="footer__logo"
+        />
+  </div>
   </footer>
 </div>
 </body>
