--- a/index.html
+++ b/index.html
@@ -138,14 +138,37 @@
     </section>  
   </main>
 <footer class="footer" id="contactos"> 
+  <div class="footer__circle"></div>
   <div class="footer__content">
     <img
           src="./images/logo_coffeeshop_light.svg"
           alt="Logotipo de la Cafetería Triple Expresso"
           class="footer__logo"
         />
+  <div class="footer__social">
+    <h3 class="footer__social footer__social-heading">Redes sociales</h3>
+    <ul class="footer__social footer__list">
+      <li class="footer__list footer__list-item">
+        <p class="footer__social-link">Facebook</p>
+        <img
+          src="./images/facebook_white.svg"
+          alt="Logotipo de Facebook"
+          class="footer__social-icon"
+        />
+      </li>
+      <li class="footer__list footer__list-item">
+        <p class="footer__social-link">Instagram</p>
+        <img
+          src="./images/instagram_white.svg"
+          alt="Logotipo de Instagram"
+          class="footer__social-icon"
+        />
+      </li>
+    </ul>
   </div>
-  </footer>
+  </div>
+  <div class="footer__copyright">© Gab Ruiz</div>
+</footer>
 </div>
 </body>
 </html>
