Sprint-4__Stage-5-Rev3 backup

--- a/index.html
+++ b/index.html
@@ -149,25 +149,25 @@
     <h3 class="footer__social footer__social-heading">Redes sociales</h3>
     <ul class="footer__social footer__list">
       <li class="footer__list footer__list-item">
-        <p class="footer__social-link">Facebook</p>
         <img
           src="./images/facebook_white.svg"
           alt="Logotipo de Facebook"
           class="footer__social-icon"
         />
+        <p class="footer__social-link">Facebook</p>
       </li>
       <li class="footer__list footer__list-item">
-        <p class="footer__social-link">Instagram</p>
         <img
           src="./images/instagram_white.svg"
           alt="Logotipo de Instagram"
           class="footer__social-icon"
         />
+        <p class="footer__social-link">Instagram</p>
       </li>
     </ul>
   </div>
   </div>
-  <div class="footer__copyright">© Gab Ruiz</div>
+  <div class="footer__copyright"></div>
 </footer>
 </div>
 </body>
