--- a/index.html
+++ b/index.html
@@ -154,20 +154,21 @@
           alt="Logotipo de Facebook"
           class="footer__social-icon"
         />
-        <p class="footer__social-link">Facebook</p>
+        <a href="#" class="footer__social-link">Facebook</a>
       </li>
-      <li class="footer__list footer__list-item">
+    <li>
         <img
           src="./images/instagram_white.svg"
           alt="Logotipo de Instagram"
           class="footer__social-icon"
         />
-        <p class="footer__social-link">Instagram</p>
+        <a href="#" class="footer__social-link">Instagram</a>
       </li>
     </ul>
   </div>
+
   </div>
-  <div class="footer__copyright"></div>
+  <div class="footer__copyright">© 2024 Gab Ruiz</div>
 </footer>
 </div>
 </body>
