Sprint-4__Stage-5-Rev6 backup corrección de estilos

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 <main class="content">
     <section class="recipes" id="recipes">
       <div class="recipes__title">
-       <h2>Recetas</h2> 
+       <h2 class="recipes__title recipes__title_content">Recetas</h2> 
       </div>
       <div class="recipes__subtitle">
-        <p>Echa un vistazo a las recetas que hemos reunido para que elabores tus propios snacks.</p>
+        <p class="recipes__subtitle recipes__subtitle_paragraph">Echa un vistazo a las recetas que hemos reunido para que elabores tus propios snacks.</p>
       </div>
        <div class="recipes__videos">
        <div class="recipes__video-item">
@@ -82,10 +82,10 @@
       </iframe>
         <div class="recipes__video-caption">
           <div class="recipes__video-caption recipes__video-caption_text">
-          <p>Receta en Aeropress</p>
+          <p class="recipes__video-caption recipes__video-caption_pharagraph">Receta en Aeropress</p>
         </div>
           <div class="recipes__video-caption recipes__video-caption_time">
-          <p>~5 min</p>
+          <p class="recipes__video-caption recipes__video-caption_pharagraph">~5 min</p>
           </div>
         </div>
       </div>
@@ -100,10 +100,10 @@
       </iframe>
         <div class="recipes__video-caption">
           <div class="recipes__video-caption recipes__video-caption_text">
-          <p>Receta en cafetera francesa</p>
+          <p class="recipes__video-caption recipes__video-caption_pharagraph">Receta en cafetera francesa</p>
         </div>
         <div class="recipes__video-caption recipes__video-caption_time">
-          <p>~15 min</p>
+          <p class="recipes__video-caption recipes__video-caption_pharagraph">~15 min</p>
         </div>
         </div>
       </div>
