Sprint-4__Stage-5-Rev7 autorevisión completa

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         />
         <a href="#" class="footer__social-link">Facebook</a>
       </li>
-    <li>
+    <li class="footer__list footer__list-item">
         <img
           src="./images/instagram_white.svg"
           alt="Logotipo de Instagram"
